<resources xmlns:tools="http://schemas.android.com/tools" tools:locale="es">
    <string name="apk_version">Versión 3.0.1</string>
    <string name="hint">Busca clases por nombre, instructor o salón\u2026</string>
    <string name="menu.lista">Lista</string>
    <string name="menu.mapa">Mapa</string>
    <string name="menu.mapa.ordenar.cercano">Cercano</string>
    <string name="menu.mapa.ordenar.alfa">A-Z</string>
    <string name="menu.clases.buscar">Buscar</string>
    <string name="number_picker_increment_button">Incremento</string>
    <string name="number_picker_decrement_button">Decremento</string>
    <string name="number_picker_increment_scroll_mode">%1$s mantén toque sostenido.</string>
    <string name="number_picker_increment_scroll_action">Hacia arriba para incrementar y hacia abajo para decrementar.</string>
    <string name="loading">Cargando\u2026</string>
    <string name="app_name">Sports World</string>
    <string name="clubs">Clubes</string>
    <string name="classes">Clases</string>
    <string name="loyalty">Mis Puntos</string>
    <string name="catalog">Catálogo de Premios</string>
    <string name="classes_fav">Clases de Clubes Favoritos</string>
    <string name="award">Mis Premios</string>
    <string name="objective">Objetivo</string>
    <string name="level">Nivel</string>
    <string name="routine">Rutinas</string>
    <string name="loyalty_program">Leal</string>
    <string name="news">Noticias</string>
    <string name="retry">Intentar de nuevo</string>
    <string name="error_connection">Por favor verifica tu conexión a internet e intenta nuevamente.</string>
    <string name="error_logout">Ocurrió un error al cerrar sesión, por favor intenta más tarde.</string>
    <string name="error_login">Ocurrió un error al actualizar tus datos, por favor intenta mas tarde</string>
    <string name="error_connection_server">Por el momento no es posible realizar tu petición, intentelo de nuevo mas tarde.</string>
    <string name="error_guest_no_value">Debes de ingresar tus datos para que puedas obtener tu rutina correctamente.</string>
    <string name="error_connection_location">Aún no podemos encontrar tu ubicación. Intentalo de nuevo en unos minutos…</string>
    <string name="error_double_class">Ya cuentas con una reservación en ese horario.</string>
    <string name="error_no_favorite_club">Toca el icono (poner icono de la estrella ) para agregar como favorito los clubes de tu preferencia y consultarlos en esta sección.</string>
    <string name="error_class_found">No se encontraron clases para el día seleccionado</string>
    <string name="error_google_play_services_connection">Error al  conectarse a Google Play Services. Intenta de nuevo.</string>
    <string name="success_save_changes">Datos actualizados.</string>
    <string name="error_duplicate_routine">Ya tienes una rutina activa. Accede desde el menú principal.</string>
    <string name="error_save_changes">Ocurrió un error al actualizar tus datos, por favor intenta más tarde.</string>
    <string name="success_favorite_changes">Has agregado este club a favoritos</string>
    <string name="error_favorite_changes">Has eliminado este club de favoritos</string>
    <string name="error_empty_values">Hay campos vacíos, llenalos antes de continuar.</string>
    <string name="error_not_a_member">Debes ser miembro de Upster para utilizar esta función</string>
    <string name="error_not_mark_favorite">Debes loguearte  con tu cuenta de Upster para poder  marcar un  club como favorito</string>
    <string name="error_no_favorite_club1">Toca el icono</string>
    <string name="error_no_favorite_club2">para agregar como favorito los clubs de tu preferencia y consultarlos en esta sección.</string>
    <string name="error_no_favorite_club3">Para consultar el calendario de clases disponibles por club, toque el icono </string>
    <string name="error_no_favorite_club4"> y agregue sus clubs favoritos.</string>
    <string name="recorrido">Recorrido Virtual</string>
    <string name="menu_title_share">Compartir</string>
    <string name="menu_info_routine">Info Routine</string>
    <string name="menu_email">Email</string>
    <string name="content_description_sports_world_logo">Logo Upster</string>
    <string name="content_description_go_to_clubs">Mostrar clubs</string>
    <string name="content_description_go_to_classes">Mostrar clases</string>
    <string name="content_description_go_to_my_routine">Mostrar mi rutina</string>
    <string name="content_description_go_to_loyalty_program">Mostrar pantalla de programa de lealtad</string>
    <string name="content_description_go_to_news">Mostrar noticias</string>
    <string name="content_description_go_to_virtual_tour">Dar un viaje virtual</string>
    <string name="content_description_avatar">Your avatar</string>
    <string name="virtual_tour">Recorrido Virtual</string>
    <string name="settings">Configuración</string>
    <string name="agree_and_continue">Continuar</string>
    <string name="take_tour">Tomar Tour</string>
    <string name="agreement">Acepto el aviso de privacidad.</string>
    <string name="action_bar_title_login">Perfil de usuario</string>
    <string name="error_empty_password_username">No has ingresado usuario o contraseña</string>
    <string name="error_invalid_username_password">Usuario o Contraseña incorrectos.</string>
    <string name="logging_in">Iniciando sesión\u2026</string>
    <string name="member_access">Acceso exclusivo a usuarios</string>
    <string name="user">Nombre de usuario</string>
    <string name="password">Contraseña</string>
    <string name="forgot_password">¿Olvidaste nombre o contraseña?</string>
    <string name="log_in_as_member">Entrar</string>
    <string name="register">¿Deseas crear una cuenta en Upster?</string>
    <string name="log_in_as_guest">Connect with facebook</string>
    <string name="log_in_as_anonymous">Omitir</string>
    <string name="log_in_as_guest_instructions">Si no eres usuario Upster, puedes ingresar por medio de:</string>
    <string name="error_save_guest_on_db">Error al guardar usuario. Inténtalo de nuevo.</string>
    <string name="error_no_web_browser">Se requiere un navegador de Internet para esta acción.</string>
    <string name="profile">Perfil de Usuario</string>
    <string name="social_networks">Redes Sociales</string>
    <string name="logout_profile">Cerrar Sesión</string>
    <string name="settings_help">Ayuda</string>
    <string name="social_top">Para poder compartir tus actividades en redes sociales, vincula tus cuentas.</string>
    <string name="physical_complexion_title_strip">COMPLEXIÓN FÍSICA</string>
    <string name="age">Edad:</string>
    <string name="height">Estatura:</string>
    <string name="weight">Peso:</string>
    <string name="gender">Género:</string>
    <string name="format_height">%1$.2f m</string>
    <string name="format_weight">%1$.2f Kg</string>
    <string name="bith_date">Fecha de nacimiento:</string>
    <string name="user_title_strip">Usuarios</string>
    <string name="name">Nombre:</string>
    <string name="membership_number">Membresía:</string>
    <string name="membership_type">Tipo de membresía:</string>
    <string name="club_name">Club:</string>
    <string name="numberUser">Número Usuario:</string>
    <string name="show_policies">Conoce los términos y condiciones</string>
    <string name="save_profile">Finalizar</string>
    <string name="guest_title_strip">Invitado</string>
    <string name="Maintenance">Mantenimiento</string>
    <string name="welcome">Bienvenido:</string>
    <string name="delete_account">Eliminar cuenta</string>
    <string name="cancel_alert_btn">Cancelar</string>
    <string name="accept_alert_btn">Continuar</string>
    <string name="error_alert_height">Debes ingresar una altura entre 1.40 m y 2.5 m.</string>
    <string name="error_alert_weight">Debes ingresar un peso entre 35 Kg y 200 Kg.</string>
    <string name="error_alert_age">La rutinas no son compatibles con sus características por favor acérquese a un entrenador.</string>
    <string name="error_alert_dato">Cada rutina se adapta a tus necesidades, es importante completar los datos de tu perfil.</string>
    <string name="financial_info_title">&lt;small>Información&lt;/small>&lt;br>&lt;strong>Financiera&lt;/strong></string>
    <string name="bussiness_name">Upster SA de CV</string>
    <string name="financial_info_last_trade">SPORTS: MM %1$.2f MXN</string>
    <string name="financial_info_change_and_result">%1$.2f </string>
    <string name="empty_news_list">No hay noticias que mostrar</string>
    <string name="empty_financial_info">Sin información que mostrar</string>
    <string name="type_favorite">clubs favoritos</string>
    <string name="type_coming_soon">Próximas aperturas</string>
    <string name="type_df">D.F. y Área Metropolitana</string>
    <string name="type_province">Foráneos</string>
    <string name="empty_specific_type_branches">Aun no existen clubs para esta categoría</string>
    <string name="empty_branches">No hay clubs</string>
    <string name="show_location">Ver ubicación</string>
    <string name="facilities">Instalaciones</string>
    <string name="call">Llamar</string>
    <string name="success_google_play_services_install">Instalación exitosa de Google Play Services.</string>
    <string name="error_no_location_for_branch">No hay ubicación para este club</string>
    <string name="error_bad_age">Edad menor a 1 o mayor a 100</string>
    <string name="error_bad_height">Altura menor a 1</string>
    <string name="error_bad_weight">Peso menor a 1</string>
    <string name="branch_name">Club %1$s</string>
    <string name="notify_branch">Reservar Lugar</string>
    <string name="book">Agendar</string>
    <string name="schedule">Horario: </string>
    <string name="confirmation">Texto de confirmación</string>
    <string name="random_lorem_ipsum"></string>
    <string name="content_description_open_calendar">Abrir calendario para elegir fecha</string>
    <string name="select_a_date">Espera a que descarguemos las clases.</string>
    <string name="empty_classes">El día seleccionado no contiene clases</string>
    <string name="success_book_class">Al llegar al club, confirma tu asistencia</string>
    <string name="success_book_class_phone">Tu clase se ha agendado en tu calendario</string>
    <string name="error_full_class">No hay cupo para esta clase</string>
    <string name="error_book_class">Error al intentar agendar clase. Intenta de nuevo.</string>
    <string name="error_book_class_time">No puedes agendar clases pasadas</string>
    <string name="coach_name">Instructor: %1$s</string>
    <string name="routine_detail">Detalle de Rutina</string>
    <string name="routine_success_active">Has activado tu rutina exitosamente</string>
    <string name="routine_success_deactive">Has desactivado tu rutina exitosamente</string>
    <string name="error_routine_disable">Su rutina no pudo ser desactivada exitosamente</string>
    <string name="error_routine_info">La información no esta disponible actualmente, favor de intentar mas tarde</string>
    <string name="radio_btn_class">Clase</string>
    <string name="radio_btn_instructor">Instructor</string>
    <string name="radio_btn_room">Salón</string>
    <string name="loyalty_button_catalogo">Catálogo de Premios</string>
    <string name="loyalty_txt_socio">Socio</string>
    <string name="loyalty_txt_puntos_tot">Puntos totales</string>
    <string name="loyalty_table_header">Últimas Transacciones</string>
    <string name="loyalty_table_accion">Acción</string>
    <string name="loyalty_table_fecha">Fecha</string>
    <string name="loyalty_table_pts">Pts</string>
    <string name="catalog_btn_continuar">Continuar</string>
    <string name="catalog_txt_saldo">Saldo Actual:</string>
    <string name="catalog_txt_redimir">Puntos a Redimir:</string>
    <string name="catalog_txt_restante">Saldo Restante:</string>
</resources>