<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="25dp"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/textView2"
            style="@style/Loyal_header_text"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="4"
            android:background="@drawable/celda_odd_transaction"
            android:text="@string/loyalty_table_accion" />

        <TextView
            android:id="@+id/textView4"
            style="@style/Loyal_header_text"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:background="@drawable/celda_odd_transaction"
            android:text="@string/loyalty_table_fecha" />

        <TextView
            android:id="@+id/textView6"
            style="@style/Loyal_header_text"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:background="@drawable/celda_odd_transaction"
            android:text="@string/loyalty_table_pts" />
    </LinearLayout>

</RelativeLayout>