<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/pantalla1_textura_fondo">

    <RelativeLayout
        android:id="@+id/header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/pantalla1_fondo_header">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/pantalla15_logo_sw"
            android:layout_centerInParent="true"/>
    </RelativeLayout>

    <RelativeLayout
        android:id = "@+id/footer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@drawable/pantalla9_footer">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_centerInParent="true">
            <CheckBox
                android:id="@+id/chc_aggre"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/transparente"
                android:layout_margin="5dp"
                android:text="@string/agreement"/>
            <Button
                android:id="@+id/btn_continue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:text="@string/agree_and_continue"
                android:textColor="#FFFFFF"
                android:background="@drawable/pantalla11_btn_entrar"
                android:visibility="invisible"/>
        </LinearLayout>
    </RelativeLayout>



    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/header"
        android:layout_above="@+id/footer">

        <LinearLayout
            android:id="@+id/lnr_progress_container"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical"
            android:visibility="gone" >

            <ProgressBar
                style="?android:attr/progressBarStyleLarge"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <WebView
            android:id="@+id/wbv_policies"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:drawSelectorOnTop="false"
            android:background="@drawable/pantalla1_textura_fondo"/>

        <RelativeLayout
            android:id="@+id/rlt_on_error_container"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="gone" >

            <TextView
                android:id="@+id/txt_error"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:gravity="center"
                android:text="@string/error_connection"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textIsSelectable="false"
                android:padding="15dp" />

            <Button
                android:id="@+id/btn_try_again"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/txt_error"
                android:layout_centerHorizontal="true"
                android:text="@string/retry" />
        </RelativeLayout>

    </FrameLayout>

</RelativeLayout>