<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="115dp"
    android:orientation="vertical"
    android:background="#fffdcd01">

    <EditText
        android:id="@+id/txtSortClass"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:ems="10"
        android:inputType="textMultiLine"
        android:textColor="@color/black"
        android:background="@color/white"
        android:layout_marginTop="8dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:focusable="true">

        <requestFocus />
    </EditText>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <RadioGroup
            android:id="@+id/radioGroupDlgClass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <RadioButton
                android:id="@+id/rdioBtnClass"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:checked="true"
                android:text="@string/radio_btn_class" />

            <RadioButton
                android:id="@+id/rdioBtnInstructor"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="3"
                android:text="@string/radio_btn_instructor" />

            <RadioButton
                android:id="@+id/rdioBtnRoom"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:text="@string/radio_btn_room" />
        </RadioGroup>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/btnCancelDlgClass"
            android:layout_width="0dp"
            android:layout_height="35dp"
            android:layout_weight="1"
            android:text="Cancelar"
            android:background="#ff4f015d"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp" />

        <Button
            android:id="@+id/btnSortDlgClass"
            android:layout_width="0dp"
            android:layout_height="35dp"
            android:layout_weight="1"
            android:text="Filtrar"
            android:background="#ff4f015d"
            android:layout_marginRight="5dp"
            android:layout_marginLeft="5dp" />
    </LinearLayout>

</LinearLayout>