<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
     android:background="@drawable/caja_saldos_premios"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/textView1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:gravity="right"
                android:text="@string/catalog_txt_saldo"
                android:textColor="@color/white"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txt_catalog_saldo"
                style="@style/txt_catalog_box"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1" >
            </TextView>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/textView2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:gravity="right"
                android:text="@string/catalog_txt_redimir"
                android:textColor="@color/white"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txt_catalog_redimir"
                style="@style/txt_catalog_box"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1" >
            </TextView>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="5dp"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/textView3"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:gravity="right"
                android:text="@string/catalog_txt_restante"
                android:textColor="@color/white"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txt_catalog_restante"
                style="@style/txt_catalog_box"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1" >
            </TextView>
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>