<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:facebook="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/pantalla15_textura_fondo">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp" >

            <FrameLayout
                android:id="@+id/frm_profile_title_strip"
                style="@style/ProfileTitleStripStyle"
                android:background="@drawable/pantalla15_fondo_header">


                <!--&#45;&#45;Falta el back, no lo pasaron el tamaño no corresponde-->
                <!--<ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/pantalla5_icono_back"
                    android:layout_marginTop="25dp"/>-->

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:src="@drawable/pantalla15_logo_sw"
                    android:layout_marginTop="10dp"/>

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:src="@drawable/pantalla15_icono_menu"
                    android:layout_marginLeft="300dp"/>


                <!--<TextView
                    style="@style/TextView.ProfileTitleStripText"
                    android:text="@string/guest_title_strip" />-->

            </FrameLayout>

            <com.facebook.widget.ProfilePictureView
                android:id="@+id/prf_avatar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_below="@id/frm_profile_title_strip"
                android:layout_gravity="center"
                android:layout_marginLeft="@dimen/common_vertical_margin"
                android:layout_marginRight="@dimen/common_minimum_vertical_separation"
                android:contentDescription="@string/content_description_avatar"
                android:gravity="center_horizontal" />

        </RelativeLayout>

        <!--  <Button
            android:id="@+id/btn_delete_account"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/common_minimum_horizontal_separation"
            android:text="@string/delete_account" />-->

        <include
            android:id="@+id/lyt_physical_complexion"
            layout="@layout/layout_physical_complexion" />

        Button
            android:id="@+id/btn_show_policies"
            style="?android:buttonStyleSmall"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/common_minimum_vertical_separation"
            android:background="@drawable/selectable_background"
            android:text="@string/show_policies"
            android:textColor="@color/black" />

        <Button
            android:id="@+id/btn_save_profile"
            android:layout_width="200dp"
            android:layout_height="60dp"
            android:layout_gravity="center"
            android:text="@string/save_profile"
            android:textStyle="bold"
            android:background="@drawable/pantalla15_btn_finalizar"
            android:textColor="@color/white" />
    </LinearLayout>

</ScrollView>